fixed width on small screens

--- a/styles.css
+++ b/styles.css
@@ -638,6 +638,7 @@ footer {
   header {
     /*width: 100%;*/
     /*max-width: 1280px;*/
+    width: 390px;
     height: 1100px;
     display: flex;
     flex-direction: column;
@@ -668,7 +669,7 @@ footer {
     /*max-width: 1110px;*/
     height: 70px;
     /*margin: 0 5% 0px 5%;*/
-    margin: 0px 0px 0px 10px;
+    margin: 0px 0px 0px 0px;
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
     background-color: #1b1b1b;
@@ -689,6 +690,7 @@ footer {
   .navbar {
     display: none;
     /*width: 100%;*/
+    width: 370px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -808,8 +810,9 @@ footer {
     margin-bottom: 10px;
   }
   .work {
-    /*width: 100%;
-  max-width: 920px;*/
+    /*width: 100%;*/
+    width: 390px;
+  /*max-width: 920px;*/
     /*margin: 0 auto;*/
     margin: 0;
     display: flex;
